force-app/main/default/objects/NotificationAutomaticTest__c/NotificationAutomaticTest__c.object-meta.xml
<CustomObject>
    <label>Notification Automatic Test</label>
    <nameField>
        <displayFormat>NAT-{yyMMdd}-{0000}</displayFormat>
        <label>Notification Automatic Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Automatic Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>