force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestAccountReference__c.field-meta.xml
<CustomField>
    <fullName>TestAccountReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Account Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Automatic Test</relationshipLabel>
    <relationshipName>NotificationAutomaticTest</relationshipName>
    <type>Lookup</type>
</CustomField>