force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestContactReference__c.field-meta.xml
<CustomField>
    <fullName>TestContactReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Contact Reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Automatic Test</relationshipLabel>
    <relationshipName>NotificationAutomaticTest</relationshipName>
    <type>Lookup</type>
</CustomField>