force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestCurrency__c.field-meta.xml
<CustomField>
    <fullName>TestCurrency__c</fullName>
    <label>Test Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>