force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestDateTime__c.field-meta.xml
<CustomField>
    <fullName>TestDateTime__c</fullName>
    <label>Test DateTime</label>
    <type>DateTime</type>
</CustomField>