force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestEmail__c.field-meta.xml
<CustomField>
    <fullName>TestEmail__c</fullName>
    <label>Test Email</label>
    <type>Email</type>
</CustomField>