force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestGeolocation__c.field-meta.xml
<CustomField>
    <fullName>TestGeolocation__c</fullName>
    <label>Test Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>