force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>TestLongTextArea__c</fullName>
    <label>Test Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>