force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestNumber__c.field-meta.xml
<CustomField>
    <fullName>TestNumber__c</fullName>
    <label>Test Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>