force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestPercent__c.field-meta.xml
<CustomField>
    <fullName>TestPercent__c</fullName>
    <label>Test Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>