force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestPhone__c.field-meta.xml
<CustomField>
    <fullName>TestPhone__c</fullName>
    <label>Test Phone</label>
    <type>Phone</type>
</CustomField>