force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestPicklist__c.field-meta.xml
<CustomField>
    <fullName>TestPicklist__c</fullName>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test Value 1</fullName>
            </value>
            <value>
                <fullName>Test Value 2</fullName>
            </value>
            <value>
                <fullName>Test Value 3</fullName>
            </value>
            <value>
                <fullName>Test Value 4</fullName>
            </value>
            <value>
                <fullName>Test Value 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>