force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestRichTestArea__c.field-meta.xml
<CustomField>
    <fullName>TestRichTestArea__c</fullName>
    <label>Test Rich TesxtArea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>