force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>Test Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>