force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestTextArea__c.field-meta.xml
<CustomField>
    <fullName>TestTextArea__c</fullName>
    <label>Test TextArea</label>
    <type>TextArea</type>
</CustomField>