force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestTime__c.field-meta.xml
<CustomField>
    <fullName>TestTime__c</fullName>
    <label>Test Time</label>
    <type>Time</type>
</CustomField>