force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestURL__c.field-meta.xml
<CustomField>
    <fullName>TestURL__c</fullName>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>