force-app/main/default/objects/NotificationAutomaticTest__c/fields/TestUserReference__c.field-meta.xml
<CustomField>
    <fullName>TestUserReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test User Reference</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NotificationAutomaticTest</relationshipName>
    <type>Lookup</type>
</CustomField>